# IOSCheck

./: .gitignore  CMakeLists.txt  Install and Open IOSCheck.command  Open IOSCheck.command  README.md  README.zh-CN.md  main.mm  package_dmg.sh
assets/: AppIcon.icns
scripts/: create_installer_app.sh  generate_icns.py  generate_icon.m
